; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/image-source/extr_obs-slideshow.c_ss_video_render.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/image-source/extr_obs-slideshow.c_ss_video_render.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.slideshow = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32*)* @ss_video_render to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ss_video_render(i8* %0, i32* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.slideshow*, align 8
  %6 = alloca i32*, align 8
  store i8* %0, i8** %3, align 8
  store i32* %1, i32** %4, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = bitcast i8* %7 to %struct.slideshow*
  store %struct.slideshow* %8, %struct.slideshow** %5, align 8
  %9 = load %struct.slideshow*, %struct.slideshow** %5, align 8
  %10 = call i32* @get_transition(%struct.slideshow* %9)
  store i32* %10, i32** %6, align 8
  %11 = load i32*, i32** %6, align 8
  %12 = icmp ne i32* %11, null
  br i1 %12, label %13, label %18

13:                                               ; preds = %2
  %14 = load i32*, i32** %6, align 8
  %15 = call i32 @obs_source_video_render(i32* %14)
  %16 = load i32*, i32** %6, align 8
  %17 = call i32 @obs_source_release(i32* %16)
  br label %18

18:                                               ; preds = %13, %2
  %19 = load i32*, i32** %4, align 8
  %20 = call i32 @UNUSED_PARAMETER(i32* %19)
  ret void
}

declare dso_local i32* @get_transition(%struct.slideshow*) #1

declare dso_local i32 @obs_source_video_render(i32*) #1

declare dso_local i32 @obs_source_release(i32*) #1

declare dso_local i32 @UNUSED_PARAMETER(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
